# dkpro-cassis

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CITATION.cff  CONTRIBUTORS.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  pyrightconfig.json  requirements-dev.in  requirements-dev.txt  requirements-doc.in  requirements-doc.txt  requirements.in  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.py  tox.ini
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  release.md
.github/workflows/: publish_to_pypi.yml  run_tests.yml
cassis/: __init__.py  __version__.py  cas.py  json.py  typesystem.py  util.py  xmi.py
cassis/cas/: __init__.py  cas.py
cassis/cas/xmi/: __init__.py  deserializer.py  serializer.py
cassis/resources/: dkpro-core-types.xml
cassis/typesystem/: __init__.py  deserializer.py  serializer.py  typesystem.py
docs/: api.md  api.rst  conf.py  index.md  index.rst
modified_typesystems/clamp/: TypeSystem.xml
modified_typesystems/ctakes/: TypeSystem.xml
src/cassis/: cas.py  json.py  typesystem.py  util.py  xmi.py
tests/: fixtures.py  performance.py  test_cas.py  test_documentation.py  test_json.py  test_typesystem.py  test_util.py  test_util_predicates.py  test_xmi.py  util.py
tests/cas/: test_cas.py
tests/cas/xmi/: test_xmi_deserializer.py  test_xmi_serializer.py
tests/test_files/: small.xmi  test_cas_generators.py
tests/test_files/json/: README.md  child_type_before_parent.json
tests/test_files/json/fs_as_array/one-way/casWithBadSofaFsOrder/: data-ref.json  data.json
tests/test_files/json/fs_as_array/one-way/tsv3-testSimpleSlotFeature/: data-ref.json  data.json  debug-typesystem.xml  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casExtendingDocumentAnnotation/: data.json
tests/test_files/json/fs_as_array/ser-ref/casWithEmojiUnicodeTextAndAnnotations/: data.json  debug-typesystem.xml  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casWithFloatingPointSpecialValues/: data.json  debug-typesystem.xml  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casWithLeftToRightTextAndAnnotations/: data.json  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casWithSofaDataArray/: data.json  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casWithSofaDataURI/: data.json  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casWithText/: data.json  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casWithTextAndAnnotation/: data.json  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casWithTextAndAnnotations/: data.json  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casWithTraditionalChineseTextAndAnnotations/: data.json  debug.xmi
tests/test_files/json/fs_as_array/ser-ref/casWithoutTextButWithAnnotations/: data.json
tests/test_files/json/fs_as_array/ser-ref/emptyCas/: data.json  debug.xmi
tests/test_files/typesystems/: important-dkpro-types.xml  inception_typesystem.xml  small_typesystem.xml  small_typesystem_with_predefined_types.xml  typesystem_has_types_with_no_namespace.xml  typesystem_merge_base.xml  typesystem_with_array_features.xml  typesystem_with_collections.xml  typesystem_with_inheritance.xml  typesystem_with_inheritance_redefined_different.xml  typesystem_with_inheritance_redefined_same.xml  typesystem_with_list_features.xml  typesystem_with_multiple_references_allowed.xml  typesystem_with_redefined_documentannotation.xml  typesystem_with_reserved_names.xml  typesystem_with_string_array.xml  webanno_types.xml
tests/test_files/xmi/: cas_has_fs_with_no_namespace.xmi  cas_with_array_features.xmi  cas_with_collections.xmi  cas_with_empty_array_reference.xmi  cas_with_floating_point_special_values.xmi  cas_with_inheritance.xmi  cas_with_inheritance.xml  cas_with_list_features.xmi  cas_with_multiple_references_allowed_string_array.xmi  cas_with_nonindexed_fs.xmi  cas_with_references.xmi  cas_with_reserved_names.xmi  cas_with_smileys.xmi  cas_with_string_array.xmi  cas_with_two_sofas.xmi  empty_cas.xmi  lenient_cas.xmi  small_cas.xmi
tests/typesystem/: test_deserializer.py  test_typesystem.py  test_typesystem_deserializer.py  test_typesystem_serializer.py
