[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dkpro-cassis"
version = "0.10.0-dev"
requires-python = ">=3.8"
authors = [ { name = "The DKPro cassis team" } ]
maintainers = [ { name = "Richard Eckart de Castilho" } ]
description = "UIMA CAS processing library in Python"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Text Processing :: Linguistic"
]
dependencies = [
    "lxml~=4.9.1",
    "attrs>=21.2,<24",
    "sortedcontainers~=2.4",
    "toposort~=1.7",
    "more-itertools~=8.12",
    "deprecation~=2.1",
    "importlib_resources~=5.4"
]

[project.optional-dependencies]
dev = [
    "pytest~=7.2",
    "tox~=3.24",
    "lxml-asserts~=0.1",
    "pytest-lazy-fixture~=0.6",
    "pytest-cov~=3.0",
    "codecov~=2.1",
    "rstcheck~=3.3",
    "docutils~=0.20,!=0.21.*",
    "ruff~=0.4.3",
    "pip-tools~=7.4.1"
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "docutils~=0.20,!=0.21.*"
]

[project.urls]
Homepage = "https://dkpro.github.io"
Documentation = "https://cassis.readthedocs.io"
Repository = "https://github.com/dkpro/dkpro-cassis"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = [ "F403", "F405" ]
