[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dkpro-cassis"
version = "0.11.0-dev"
requires-python = ">=3.9"
authors = [ { name = "The DKPro cassis team" } ]
maintainers = [ { name = "Richard Eckart de Castilho" } ]
description = "UIMA CAS processing library in Python"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Text Processing :: Linguistic"
]
dependencies = [
    "lxml~=5.3.1",
    "attrs>=21.2,<26",
    "sortedcontainers~=2.4",
    "toposort~=1.10",
    "more-itertools~=10.6",
    "deprecation~=2.1",
    "importlib_resources~=6.5.2"
]

[dependency-groups]
dev = [
    "pytest~=8.3.5",
    "pytest-lazy-fixtures~=1.1.2",
    "pytest-cov~=6.0.0",
    "lxml-asserts~=0.1.2",
    "codecov~=2.1.13",
    "rstcheck~=6.2.4",
    "docutils~=0.21.2",
    "ruff~=0.9.10",
    "taskipy"
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "docutils~=0.21.2"
]

[project.urls]
Homepage = "https://dkpro.github.io"
Documentation = "https://cassis.readthedocs.io"
Repository = "https://github.com/dkpro/dkpro-cassis"

[tool.taskipy.tasks]
test = "pytest -m 'not performance' tests/"
test-cov = "pytest -m 'not performance' --cov=./ --cov-report=xml tests/"
format = "ruff format cassis/ tests/"
lint = "ruff check cassis/ tests/"
fix = "ruff check --fix cassis/ tests/"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Equivalent to flake8's E9,F63,F7,F82 (syntax errors and undefined names)
select = [
    "E9",   # Runtime errors
    "F63",  # Invalid print syntax
    "F7",   # Syntax errors in type comments
    "F82",  # Undefined names in __all__
    "F",    # Pyflakes (includes undefined names, unused imports, etc.)
]
# Equivalent to flake8's --max-complexity=10
mccabe = { max-complexity = 10 }

[tool.ruff.lint.per-file-ignores]
# Allow star imports in test files for test utilities
"**/{tests,docs,tools}/*" = [ "F403", "F405" ]

[tool.pytest.ini_options]
testpaths = ["tests"]
